# cardiovascular_system_1

./: BloodFlow_Poiseuille_with_Thresholds_1756459610.ipynb  Exercise 1.ipynb  Exercise 2.ipynb  Exercise 3.ipynb  README.md  gen_notebook.py  pyproject.toml  solute_transport_exercise.ipynb
